boards: ct: ctcc: update board files
Signed-off-by: Jan Kowalewski <jkowalewski@cthings.co>

--- a/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot.conf
+++ b/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot.conf
@@ -1,14 +1,16 @@
 # Disable logging
+CONFIG_LOG=n
+CONFIG_CONSOLE=n
 CONFIG_UART_CONSOLE=n
 
-# MCUBoot mcumgr serial configuration
+# MCUBoot serial configuration
 CONFIG_MCUBOOT_SERIAL=y
 CONFIG_BOOT_SERIAL_ENTRANCE_GPIO=n
-CONFIG_BOOT_USB_DFU_WAIT=n
 CONFIG_BOOT_SERIAL_CDC_ACM=y
 CONFIG_BOOT_SERIAL_WAIT_FOR_DFU=y
 CONFIG_BOOT_SERIAL_NO_APPLICATION=y
 CONFIG_BOOT_SERIAL_WAIT_FOR_DFU_TIMEOUT=5000
+CONFIG_BOOT_USB_DFU_WAIT=n
 
 # Required by USB
 CONFIG_MULTITHREADING=y
@@ -16,6 +18,3 @@ CONFIG_MULTITHREADING=y
 # USB
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
-CONFIG_BOOT_SERIAL_IMG_GRP_IMAGE_STATE=y
-CONFIG_MCUBOOT_INDICATION_LED=y
-CONFIG_USB_DEVICE_PID=0x0101
