--- a/boards/ct/ctcc/ctcc_nrf52840.dts
+++ b/boards/ct/ctcc/ctcc_nrf52840.dts
@@ -79,6 +79,14 @@
 	gpio-as-nreset;
 };
 
+&reg0 {
+	status = "okay";
+};
+
+&reg1 {
+	regulator-initial-mode = <NRF5X_REG_MODE_DCDC>;
+};
+
 &gpiote {
 	status = "okay";
 };
