--- a/boards/ct/ctcc/ctcc_nrf9151_common.dtsi
+++ b/boards/ct/ctcc/ctcc_nrf9151_common.dtsi
@@ -4,12 +4,12 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-#include "ctcc_nrf9161-pinctrl.dtsi"
+#include "ctcc_nrf9151-pinctrl.dtsi"
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
-	model = "CTHINGS.CO Connectivity Card nRF9161";
-	compatible = "ct,ctcc-nrf9161";
+	model = "CTHINGS.CO Connectivity Card nRF9151";
+	compatible = "ct,ctcc-nrf9151";
 
 	chosen {
 		zephyr,console = &uart0;
@@ -81,5 +81,55 @@
 	};
 };
 
-/* Include default memory partition configuration file */
-#include <common/nordic/nrf91xx_partition.dtsi>
+&flash0 {
+	partitions {
+		compatible = "fixed-partitions";
+		#address-cells = <1>;
+		#size-cells = <1>;
+
+		boot_partition: partition@0 {
+			label = "mcuboot";
+			reg = <0x00000000 0x10000>;
+		};
+		slot0_partition: partition@10000 {
+			label = "image-0";
+		};
+		slot0_ns_partition: partition@50000 {
+			label = "image-0-nonsecure";
+		};
+		slot1_partition: partition@85000 {
+			label = "image-1";
+		};
+		slot1_ns_partition: partition@c5000 {
+			label = "image-1-nonsecure";
+		};
+		storage_partition: partition@fa000 {
+			label = "storage";
+			reg = <0x000fa000 0x00006000>;
+		};
+	};
+};
+
+/ {
+
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		sram0_s: image_s@20000000 {
+			/* Secure image memory */
+		};
+
+		sram0_modem: image_modem@20016000 {
+			/* Modem (shared) memory */
+		};
+
+		sram0_ns: image_ns@20020000 {
+			/* Non-Secure image memory */
+		};
+	};
+};
+
+/* Include partition configuration file */
+#include "ctcc_nrf9151_partition_conf.dtsi"
