--- a/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot/prj.conf
+++ b/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot/prj.conf
@@ -18,3 +18,8 @@ CONFIG_MULTITHREADING=y
 # USB
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
+
+# Flash & SPI NOR
+CONFIG_FLASH=y
+CONFIG_FPROTECT=y
+CONFIG_SPI_NOR=n
