fix mcuboot and cleanup
Signed-off-by: Adam Szewczyk <a.szewczyk@cthings.co>

--- a/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot/prj.conf
+++ b/boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot/prj.conf
@@ -1,3 +1,5 @@
+# Increase stack
+CONFIG_MAIN_STACK_SIZE=10240
 # Disable logging
 CONFIG_LOG=n
 CONFIG_CONSOLE=n
@@ -23,3 +25,7 @@ CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
 CONFIG_FLASH=y
 CONFIG_FPROTECT=y
 CONFIG_SPI_NOR=n
+
+# Disable Flash Patch
+CONFIG_DISABLE_FLASH_PATCH=y
+
